--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@vercel/blob": "^0.23.4",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "grunt": "^1.6.1",
     "grunt-contrib-cssmin": "^5.0.0",
